--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #46529d;
+  color: #FFF;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-center {text-align: center;}
+.container {
+  width: 60%;
+  margin: 10% auto;
+}
+.listItems {
+  background-color: #FFF;
+  color: #46529d;
+}
+.listItems p {
+  margin: 0;
+  text-align: center;
+  padding: 10px 0;
+}
+.listItems span {
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 25px;
+  border:  0.3px solid #CCC;
+}
+.listItems span.title {
+  background-color: #2ebaee;
+  color: #FFF;
+}
+.listItems span.name,
+form input[type=text] {
+  width: 60%;
+}
+.listItems span.age,
+form input[type=number] {
+  width: 30%;
+}
+
+.listItems span.action,
+form button[type=submit] {
+  width: 10%;
+}
+.listItems span.icon {
+  color: #f00;
+  cursor: pointer;
+}
+form input {
+  padding: 10px;
+  background-color: #ebebeb;
+  border: 0.3px solid #CCC;
+}
+form button {
+  padding: 10px;
+  background-color: #2ebaee;
+  border: 0.3px solid #2ebaee;
 }
